@@ -1,20 +1,24 @@
 package bio.terra.service.filedata.azure.tables;
 
 import bio.terra.service.common.azure.StorageTableName;
+import bio.terra.service.filedata.exception.FileSystemExecutionException;
 import com.azure.core.http.rest.PagedIterable;
 import com.azure.data.tables.TableClient;
 import com.azure.data.tables.TableServiceClient;
 import com.azure.data.tables.models.ListEntitiesOptions;
 import com.azure.data.tables.models.ListTablesOptions;
 import com.azure.data.tables.models.TableEntity;
-import com.azure.data.tables.models.TableItem;
+import com.azure.data.tables.models.TableServiceException;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class TableServiceClientUtils {
+  private static final Logger logger = LoggerFactory.getLogger(TableServiceClientUtils.class);
 
   public static boolean tableHasEntries(
       TableServiceClient tableServiceClient, String tableName, ListEntitiesOptions options) {
@@ -24,9 +28,14 @@ public class TableServiceClientUtils {
     if (tableExists(tableServiceClient, tableName)) {
       TableClient tableClient = tableServiceClient.getTableClient(tableName);
       options.setTop(1);
-      PagedIterable<TableEntity> tableEntities = tableClient.listEntities(options, null, null);
-      if (tableEntities.iterator().hasNext()) {
-        return true;
+      try {
+        PagedIterable<TableEntity> tableEntities = tableClient.listEntities(options, null, null);
+        if (tableEntities.iterator().hasNext()) {
+          return true;
+        }
+      } catch (TableServiceException ex) {
+        logger.error("Error listing entities in table {}", tableName, ex);
+        return false;
       }
     }
     return false;
@@ -40,9 +49,14 @@ public class TableServiceClientUtils {
   public static boolean tableExists(TableServiceClient tableServiceClient, String tableName) {
     ListTablesOptions options =
         new ListTablesOptions().setFilter(String.format("TableName eq '%s'", tableName));
-    PagedIterable<TableItem> retrievedTableItems =
-        tableServiceClient.listTables(options, null, null);
-    return retrievedTableItems.iterator().hasNext();
+    try {
+      var result = tableServiceClient.listTables(options, null, null);
+      logger.info("Table {} exists", tableName);
+      return result.iterator().hasNext();
+    } catch (TableServiceException ex) {
+      logger.error("Error listing tables with table name filter " + tableName, ex);
+      return false;
+    }
   }
 
   public static List<TableEntity> filterTable(
@@ -50,8 +64,17 @@ public class TableServiceClientUtils {
     TableClient tableClient = tableServiceClient.getTableClient(tableName);
     ListEntitiesOptions options = new ListEntitiesOptions().setFilter(filter);
     if (TableServiceClientUtils.tableHasEntries(tableServiceClient, tableName, options)) {
-      return tableClient.listEntities(options, null, null).stream().collect(Collectors.toList());
+      try {
+        var result = tableClient.listEntities(options, null, null).stream().toList();
+        logger.info("Found {} entities in table {}", result.size(), tableName);
+        return result;
+      } catch (TableServiceException ex) {
+        throw new FileSystemExecutionException(
+            String.format("Error listing entities from table %s with filter %s", tableName, filter),
+            ex);
+      }
     }
+    logger.info("No entities found in table {} with filter {}", tableName, filter);
     return Collections.emptyList();
   }
 
@@ -82,12 +105,20 @@ public class TableServiceClientUtils {
     options.setTop(2);
     if (tableHasEntries(tableServiceClient, tableName, options)) {
       TableClient tableClient = tableServiceClient.getTableClient(tableName);
-      PagedIterable<TableEntity> entities = tableClient.listEntities(options, null, null);
-      Iterator<TableEntity> iter = entities.iterator();
-      // Since hasHasEntries = true, we expect there to be at least one entry
-      iter.next();
-      // Test for exactly one entry - the next hasNext() should return false
-      return !iter.hasNext();
+      try {
+        PagedIterable<TableEntity> entities = tableClient.listEntities(options, null, null);
+        Iterator<TableEntity> iter = entities.iterator();
+        // Since hasHasEntries = true, we expect there to be at least one entry
+        iter.next();
+        // Test for exactly one entry - the next hasNext() should return false
+        return !iter.hasNext();
+      } catch (TableServiceException ex) {
+        logger.error(
+            String.format(
+                "Error listing entities from table %s with filter %s",
+                tableName, options.getFilter()),
+            ex);
+      }
     }
     return false;
   }
